2006-10-24  Fabio Marzocca  <thesaltydog@gmail.com>

	* pixmaps/Makefile.am:
	* pixmaps/alfa_sort.png:
	* pixmaps/baobab.png:
	* pixmaps/busy.gif:
	* pixmaps/done.png:
	* pixmaps/format_numeric.png:
	* pixmaps/format_percent.png:
	* pixmaps/green.png:
	* pixmaps/nautilus.png:
	* pixmaps/num_sort.png:
	* pixmaps/red.png:
	* pixmaps/scan_directory.png:
	* pixmaps/scan_harddisk.png:
	* pixmaps/search.png:
	* pixmaps/searchall.png:
	* pixmaps/stop.png:
	* pixmaps/white.png:
	* pixmaps/yellow.png:

	Removed obsolete pixmaps

2006-10-24  Paolo Borelli  <pborelli@katamail.com>

	* src/Makefile.am:
	* src/baobab-cell-renderer-progress.c:
	(baobab_cell_renderer_progress_init),
	(baobab_cell_renderer_progress_new),
	(baobab_cell_renderer_progress_get_property),
	(baobab_cell_renderer_progress_set_property),
	(baobab_cell_renderer_progress_get_size),
	(set_color_according_to_perc),
	(baobab_cell_renderer_progress_render),
	(baobab_cell_renderer_progress_class_init):
	* src/baobab-cell-renderer-progress.h:
	* src/baobab-treeview.c: (create_model),
	(create_directory_treeview):
	* src/baobab-treeview.h:
	* src/baobab-utils.c: (show_bars):
	* src/baobab-utils.h:
	* src/baobab.c: (prefill_model), (first_row), (fill_model):

	Use a custom cell renderer instead of the pixbuf bars

2006-10-22  Paolo Borelli  <pborelli@katamail.com>

	* src/gedit-tree-map.c: reduce memory usage, free the name
	before recursing.

2006-10-21  Paolo Borelli  <pborelli@katamail.com>

	* src/gedit-scan.c: do not fetch VfsInfo twice.

2006-10-19  Paolo Borelli  <pborelli@katamail.com>

	* src/gedit-spinner.[ch]:

	Update to the latest version of the spinner.

2006-10-19  Fabio Marzocca  <thesaltydog@gmail.com>

	* src/baobab-scan.c: (loopdir):
	
	BUGZILLA: #351987 - Baobab hangs on directories with wrong
	premissions 

2006-10-14  Paolo Borelli  <pborelli@katamail.com>

	* src/baobab.[ch]:
	* src/baobab-utils.[ch]:
	* src/gedit-spinner.[ch]:

	Update to the latest version of the spinner and misc related