@@ -47,13 +47,13 @@
 		  <child>
 		    <widget class="GtkImageMenuItem" id="menuscanhome">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">_Scan Home Folder</property>
+		      <property name="label" translatable="yes">Scan _Home Folder</property>
 		      <property name="use_underline">True</property>
 		      <signal name="activate" handler="on_menuscanhome_activate" last_modification_time="Wed, 23 Aug 2006 03:59:38 GMT"/>
 		      <accelerator key="S" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image453">
+			<widget class="GtkImage" id="image458">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-home</property>
 			  <property name="icon_size">1</property>
@@ -75,7 +75,7 @@
 		      <accelerator key="F" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image454">
+			<widget class="GtkImage" id="image459">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-harddisk</property>
 			  <property name="icon_size">1</property>
@@ -97,7 +97,7 @@
 		      <accelerator key="O" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image455">
+			<widget class="GtkImage" id="image460">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-directory</property>
 			  <property name="icon_size">1</property>
@@ -113,13 +113,12 @@
 		  <child>
 		    <widget class="GtkImageMenuItem" id="menu_scan_rem">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">Scan _Remote Folder...</property>
+		      <property name="label" translatable="yes">S_can Remote Folder...</property>
 		      <property name="use_underline">True</property>
 		      <signal name="activate" handler="on_menu_scan_rem_activate" last_modification_time="Fri, 18 Nov 2005 18:20:25 GMT"/>
-		      <accelerator key="R" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image456">
+			<widget class="GtkImage" id="image461">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-network</property>
 			  <property name="icon_size">1</property>
@@ -133,7 +132,7 @@
 		  </child>
 
 		  <child>
-		    <widget class="GtkSeparatorMenuItem" id="separator3">
+		    <widget class="GtkSeparatorMenuItem" id="separator1">
 		      <property name="visible">True</property>
 		    </widget>
 		  </child>
@@ -142,27 +141,25 @@
 		    <widget class="GtkImageMenuItem" id="menustop">
 		      <property name="visible">True</property>
 		      <property name="sensitive">False</property>
-		      <property name="label" translatable="yes">_Stop</property>
-		      <property name="use_underline">True</property>
+		      <property name="label">gtk-stop</property>
+		      <property name="use_stock">True</property>
 		      <signal name="activate" handler="on_menu_stop_activate" last_modification_time="Tue, 29 Aug 2006 04:04:57 GMT"/>
 		      <accelerator key="Escape" modifiers="0" signal="activate"/>
-
-		      <child internal-child="image">
-			<widget class="GtkImage" id="image457">
-			  <property name="visible">True</property>
-			  <property name="stock">gtk-stop</property>
-			  <property name="icon_size">1</property>
-			  <property name="xalign">0.5</property>
-			  <property name="yalign">0.5</property>
-			  <property name="xpad">0</property>
-			  <property name="ypad">0</property>
-			</widget>
-		      </child>
 		    </widget>
 		  </child>
 
 		  <child>
-		    <widget class="GtkSeparatorMenuItem" id="separator6">
+		    <widget class="GtkImageMenuItem" id="menurescan">
+		      <property name="visible">True</property>
+		      <property name="label">gtk-refresh</property>
+		      <property name="use_stock">True</property>
+		      <signal name="activate" handler="on_menu_rescan_activate" last_modification_time="Sat, 28 Oct 2006 14:27:31 GMT"/>
+		      <accelerator key="R" modifiers="GDK_CONTROL_MASK" signal="activate"/>
+		    </widget>
+		  </child>
+
+		  <child>
+		    <widget class="GtkSeparatorMenuItem" id="separator2">
 		      <property name="visible">True</property>
 		    </widget>
 		  </child>
@@ -210,7 +207,7 @@
 		  </child>
 
 		  <child>
-		    <widget class="GtkSeparatorMenuItem" id="separator4">
+		    <widget class="GtkSeparatorMenuItem" id="separator3">
 		      <property name="visible">True</property>
 		    </widget>
 		  </child>
@@ -268,7 +265,7 @@
 		  </child>
 
 		  <child>
-		    <widget class="GtkSeparatorMenuItem" id="separator5">
+		    <widget class="GtkSeparatorMenuItem" id="separator4">
 		      <property name="visible">True</property>
 		    </widget>
 		  </child>
@@ -304,7 +301,7 @@
 		      <accelerator key="F1" modifiers="0" signal="activate"/>
 
 		      <child internal-child="image">
-			<widget class="GtkImage" id="image458">
+			<widget class="GtkImage" id="image462">
 			  <property name="visible">True</property>
 			  <property name="stock">gtk-help</property>
 			  <property name="icon_size">1</property>
@@ -438,8 +435,6 @@
 	      <property name="visible">True</property>
 	      <property name="sensitive">False</property>
 	      <property name="tooltip" translatable="yes">Stop scanning</property>
-	      <property name="label" translatable="yes">Stop</property>
-	      <property name="use_underline">True</property>
 	      <property name="stock_id">gtk-stop</property>
 	      <property name="visible_horizontal">True</property>
 	      <property name="visible_vertical">True</property>
@@ -454,12 +449,21 @@
 	  </child>
 
 	  <child>
-	    <placeholder/>
+	    <widget class="GtkToolButton" id="tbrescan">
+	      <property name="visible">True</property>
+	      <property name="sensitive">False</property>
+	      <property name="stock_id">gtk-refresh</property>
+	      <property name="visible_horizontal">True</property>
+	      <property name="visible_vertical">True</property>
+	      <property name="is_important">False</property>
+	      <signal name="clicked" handler="on_tbrescan_clicked" last_modification_time="Sat, 28 Oct 2006 14:26:18 GMT"/>
+	    </widget>
+	    <packing>
+	      <property name="expand">False</property>
+	      <property name="homogeneous">True</property>
+	    </packing>
 	  </child>
 
-	  <child>
-	    <placeholder/>
-	  </child>
 	</widget>
 	<packing>
 	  <property name="padding">0</property>
